# physarum_wgpu

./: Cargo.toml  README.md
src/: main.rs
src/init/: init_functions.rs
src/shaders/compute/: init_predator.wgsl  init_slime.wgsl  slime_movement.wgsl  update_food.wgsl  update_pheremone_texture.wgsl
src/shaders/fragment/: slime_frag.wgsl
src/shaders/vertex/: v2.wgsl
src/state/: app_state.rs  control_state.rs
src/structs/: mod.rs  structs.rs
src/updates/: mod.rs  update_functions.rs
